--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest-preset-angular": "^4.0.1",
     "ngx-quill": "^1.5.1",
     "ngx-quill-editor": "^2.2.2",
+    "quill": "^1.3.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -53,6 +54,9 @@
     "typescript": "~2.3.3"
   },
   "jest": {
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!ngx-quill-editor)"
+    ],
     "preset": "jest-preset-angular",
     "setupTestFrameworkScriptFile": "<rootDir>/src/setupJest.ts",
     "moduleNameMapper": {
